Fixed textarea overflow on Firefox

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -188,7 +188,8 @@ textarea {
 .cli-code {
   width: 100%;
   white-space: nowrap;
-  overflow: auto;
+  overflow-x: auto;
+  overflow-y: hidden;
   padding: 23px;
   line-height: 34px;
   font-family: monospace;
